<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_5"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mainQuestionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <EditText
        android:id="@+id/edtQuestion"
        style="@style/questionEditTextStyle"
        android:layout_width="@dimen/edt_width"
        android:layout_height="@dimen/txt_height"
        android:layout_alignParentLeft="true"
        android:hint="@string/question_hint" />

    <Spinner
        android:id="@+id/questionSpinner"
        style="@style/mediumSpinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/txt_height"
        android:layout_toRightOf="@+id/edtQuestion"
        android:entries="@array/question_type"
        android:spinnerMode="dropdown"></Spinner>



        <EditText
            android:id="@+id/edtAnswer1"
            style="@style/questionEditTextStyle"
            android:layout_width="@dimen/recycle_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtQuestion"
            android:hint="@string/answer_hint1" />

        <EditText
            android:id="@+id/edtAnswer2"
            style="@style/questionEditTextStyle"
            android:layout_width="@dimen/recycle_width"
            android:layout_height="@dimen/txt_height"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtAnswer1"
            android:hint="@string/answer_hint2"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edtAnswer3"
            style="@style/questionEditTextStyle"
            android:layout_width="@dimen/recycle_width"
            android:layout_height="@dimen/txt_height"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtAnswer2"
            android:hint="@string/answer_hint3"
            android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/answerList"
        android:layout_width="@dimen/recycle_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtQuestion"
        android:visibility="gone"></android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/txtAddSubQuestion"
        style="@style/smallTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/questionSpinner"
        android:layout_margin="@dimen/margin_5"
        android:drawableLeft="@drawable/ic_add_circle_black_24dp"
        android:gravity="center_vertical"
        android:text="@string/add_sub_question" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/subQuestionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:layout_below="@id/mainQuestionContainer"
        android:visibility="gone">

        <EditText
            android:id="@+id/edtSubQuestion"
            style="@style/questionEditTextStyle"
            android:layout_width="@dimen/edt_width"
            android:layout_height="@dimen/txt_height"
            android:layout_alignParentLeft="true"
            android:hint="@string/question_hint" />

        <Spinner
            android:id="@+id/subQuestionSpinner"
            style="@style/mediumSpinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_height"
            android:layout_toRightOf="@+id/edtSubQuestion"
            android:entries="@array/question_type"
            android:spinnerMode="dropdown"></Spinner>

        <EditText
            android:id="@+id/edtSubAnswer1"
            style="@style/questionEditTextStyle"
            android:layout_width="@dimen/recycle_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtSubQuestion"
            android:hint="@string/answer_hint1" />

        <EditText
            android:id="@+id/edtSubAnswer2"
            style="@style/questionEditTextStyle"
            android:layout_width="@dimen/recycle_width"
            android:layout_height="@dimen/txt_height"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtSubAnswer1"
            android:hint="@string/answer_hint2" />

        <EditText
            android:id="@+id/edtSubAnswer3"
            style="@style/questionEditTextStyle"
            android:layout_width="@dimen/recycle_width"
            android:layout_height="@dimen/txt_height"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtSubAnswer2"
            android:hint="@string/answer_hint3" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/subQuestionAnswerList"
            android:layout_width="@dimen/recycle_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtSubQuestion"
            android:visibility="gone"></android.support.v7.widget.RecyclerView>


    </RelativeLayout>


</RelativeLayout>



